fix: fix focus ring visible when user interacts with mouse

--- a/packages/core/src/components/radio/index.scss
+++ b/packages/core/src/components/radio/index.scss
@@ -12,8 +12,7 @@
 		box-shadow: $-inner-ring;
 	}
 
-	.focus + &,
-	:focus + & {
+	:focus-visible + & {
 		@include a11y.focus-halo($-inner-ring);
 	}
 }
